Ensure inline breakpoint phantom doesn't wrap

--- a/main/components/components.css
+++ b/main/components/components.css
@@ -1,4 +1,6 @@
-
+.BreakpointInlineComponent {
+	width: 100rem;
+}
 .StackFrameComponent {
 	padding-left: var(--width);
 }
